@@ -1,3 +1,5 @@
+* Check opened project to erase party
+
 Version 4.6.0 - 2017-10-30
 * Bug fixes (see mercurial logs for details)
 * Add sequence attribute on tree views
